--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <!-- Main Game Container -->
     <div id="game-container">
-        <!-- Canvas for typing level -->
-        <canvas id="game-canvas"></canvas>
+        <!-- Canvas for typing level (also used for attract mode) -->
+        <canvas id="game-canvas" style="display: block;"></canvas>
 
         <!-- Vim editor DOM element (hidden by default) -->
         <div id="vim-editor" style="display:none;">
@@ -32,12 +32,16 @@
     <div id="ui-overlay">
         <!-- Top Bar -->
         <div id="top-bar">
-            <!-- Left: Control Button -->
+            <!-- Left: Control Buttons -->
             <div id="game-controls">
                 <button id="pause-button" class="control-button" style="display:none;">PAUSE</button>
+                <button id="reset-button" class="control-button" style="display:none;">RESET</button>
             </div>
 
-            <!-- Center: Level Progress -->
+            <!-- Center: Stage Chevrons (trophies/stars) -->
+            <div id="stage-chevrons"></div>
+
+            <!-- Right: Level Progress -->
             <div id="level-progress">
                 <div class="level-indicator" id="typing-level">
                     <span class="level-name">TYPING</span>
@@ -45,16 +49,16 @@
                 </div>
                 <div class="level-indicator locked" id="vim-level">
                     <span class="level-name">VIM</span>
-                    <div class="level-bar"><div class="level-fill"></div></div>
+                    <span class="coming-soon">COMING SOON</span>
                 </div>
                 <div class="level-indicator locked" id="tmux-level">
                     <span class="level-name">TMUX</span>
-                    <div class="level-bar"><div class="level-fill"></div></div>
+                    <span class="coming-soon">COMING SOON</span>
                 </div>
             </div>
 
-            <!-- Right: Stats -->
-            <div id="stats-display">
+            <!-- Right: Stats (hidden - kept for future use) -->
+            <div id="stats-display" style="display: none;">
                 <div class="stat-item">
                     <span class="stat-value" id="wpm-display">0</span>
                     <span class="stat-label">WPM</span>
@@ -76,6 +80,20 @@
         </div>
     </div>
 
+    <!-- Reset Confirmation Modal -->
+    <div id="reset-modal" class="modal-overlay" style="display:none;">
+        <div class="modal-content">
+            <h2>RESET PROGRESS?</h2>
+            <p>Are you sure you want to lose all your progress?</p>
+            <p class="warning-text">This action cannot be undone!</p>
+            <div class="modal-buttons">
+                <button id="reset-confirm" class="modal-button danger">YES, RESET</button>
+                <button id="reset-cancel" class="modal-button">CANCEL</button>
+            </div>
+        </div>
+    </div>
+
+
     <!-- Start Screen Overlay -->
     <div id="start-screen" class="screen-overlay">
         <pre id="title-art">
@@ -88,10 +106,15 @@
         </pre>
         <h2>Type fast. Type well. Type to survive.</h2>
         <button id="start-button" class="game-button">START GAME</button>
+        <div style="position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); color: #666; font-size: min(12px, 2.5vw); white-space: nowrap;">
+            © 2025 Kerry Ivan Kurian. Made with ❤️ on the West Coast, USA.
+        </div>
     </div>
 
     <!-- Load all JavaScript modules -->
     <script src="js/utils.js"></script>
+    <script src="js/version-check.js"></script>
+    <script src="js/attract-mode.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/audio.js"></script>
     <script src="js/keyboard.js"></script>
@@ -178,6 +201,10 @@
     <!-- Initialize game when DOM ready -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
+            // Initialize version checker
+            window.versionChecker = new VersionChecker();
+
+            // Initialize game
             window.game = new TypeAttackGame();
             // Game will auto-start when user clicks start button
         });
