Fix progress persistence and disable update notifications
- Fix version checker to compare consistent lastModified-etag format
- Fix auto-save to call game.saveProgress() for consistent data structure
- Add stage tracking to player progress (typingStage, vimStage, tmuxStage)
- Restore saved stage on game start with correct difficulty settings
- Prevent proficiency regression by only updating when improved
- Add 5-second delay before calculating proficiency to avoid reset on game start
- Update progress display after loading to show saved proficiency
- Save progress on beforeunload event
- Disable version checker initialization (commented out)

--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
     <!-- Initialize game when DOM ready -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            // Initialize version checker
-            window.versionChecker = new VersionChecker();
+            // Initialize version checker (disabled for now)
+            // window.versionChecker = new VersionChecker();
 
             // Initialize game
             window.game = new TypeAttackGame();
