--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
         </pre>
         <h2>Type fast. Type well. Type to survive.</h2>
         <button id="start-button" class="game-button">START GAME</button>
+        <div id="mobile-message" style="display: none; text-align: center; padding: 20px; color: #ff6b6b; max-width: 400px; margin: 0 auto;">
+            <h3 style="margin-bottom: 10px;">⌨️ Keyboard Required</h3>
+            <p style="margin: 0; line-height: 1.6;">TypeAttack requires a physical keyboard to play. Please visit this site on a desktop or laptop computer.</p>
+        </div>
         <div style="position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); color: #666; font-size: min(12px, 2.5vw); white-space: nowrap;">
             © 2025 Kerry Ivan Kurian. Made with ❤️ on the West Coast, USA.
         </div>
