Integrate leaderboard system with game
- Add leaderboard JavaScript modules to index.html
- Add leaderboard container div for display
- Integrate session recording into typing game:
  - Start recording on game init with seed tracking
  - Record word spawns with position data
  - Track all keystrokes (correct and incorrect)
  - Record word completions
  - Update stage progression
  - Show score submission modal on level completion
- Session data automatically compiled when player reaches 48 WPM for 1 minute
- Ready for Cloudflare Worker deployment and testing

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
         </div>
     </div>
 
+    <!-- Leaderboard Container -->
+    <div id="leaderboard-container" style="display: none;"></div>
+
     <!-- Load all JavaScript modules -->
     <script src="js/utils.js"></script>
     <script src="js/version-check.js"></script>
@@ -191,6 +194,13 @@
 
     <!-- Debug modules -->
     <script src="js/debug/performance.js"></script>
+
+    <!-- Leaderboard modules -->
+    <script src="js/user-identity.js"></script>
+    <script src="js/session-hash.js"></script>
+    <script src="js/session-recorder.js"></script>
+    <script src="js/score-submission.js"></script>
+    <script src="js/leaderboard.js"></script>
 
     <!-- Level implementations -->
     <script src="js/typing.js"></script>
