Make leaderboard submission more accessible
- Remove hardcoded 48 WPM requirement for score submission
- Add flexible leaderboard-worthy criteria:
  - Complete 5+ stages
  - Achieve 40+ WPM with 85%+ accuracy
  - Play for 2+ minutes with 30+ WPM
  - Reach word stages (stage 10+)
- Trigger submission at milestone stages (5, 10, 15, final)
- Add manual submission via Ctrl/Cmd+S keyboard shortcut
- Add "Submit Score" button that appears when performance is worthy
- Allow continued play after submission without interrupting session
- Restart session recording after submission for continued tracking

This makes the leaderboard more inclusive while still maintaining quality scores

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <!-- Left: Control Buttons -->
             <div id="game-controls">
                 <button id="reset-button" class="control-button" style="display:none;">RESET</button>
+                <button id="submit-score-button" class="control-button" style="display:none;">SUBMIT SCORE</button>
             </div>
 
             <!-- Center: Stage Chevrons (trophies/stars) -->
