Add arcade scoring, hot streak system, and game over mechanics
- Implement classic arcade-style score display in top-left corner
- Add hot streak system with progressive multipliers (1.25x to 3x)
- Track consecutive correct keystrokes with bonus accumulation
- Add game over when 10 words escape off screen
- Create comprehensive sound effects:
  - Hot streak music loop during active streaks
  - Power-up sound for multiplier increases
  - Celebration fanfare for hot streak bonus
  - Word miss sound when words escape
  - Wrong key press sound for typing errors
  - Game over sound with descending melody
- Redesign visual indicators for cleaner UI:
  - Minimal hot streak counter in top-left
  - Brief multiplier announcements in center
  - Remove health bar for cleaner display
- Add auto-return to menu after 10 seconds on game over
- Store and restore score with game progress

--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
     <div id="ui-overlay">
         <!-- Top Bar -->
         <div id="top-bar">
-            <!-- Left: Empty space for symmetry -->
-            <div id="game-controls"></div>
+            <!-- Left: Score Display -->
+            <div id="game-controls">
+                <div id="score-display" style="display: none;">
+                    <span class="score-label">SCORE</span>
+                    <span class="score-value">0000000</span>
+                </div>
+            </div>
 
             <!-- Center: Stage Chevrons (trophies/stars) -->
             <div id="stage-chevrons"></div>
